# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build-prod.sh  build.sh  pyproject.toml  requirements.txt  setup.cfg  users
.github/workflows/: test.yml
authorization/: forms.py  views.py
labels/: decorators.py  forms.py  models.py  urls.py  views.py
labels/templates/: label_create.html  label_delete.html  label_update.html  labels_index.html
statuses/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/: delete_status.html  status_create.html  status_delete.html  status_update.html  statuses_index.html  update_status.html
task_manager/: admin.py  decorators.py  forms.py  models.py  read_json.py  settings.py  urls.py  views.py
task_manager/authorization/: forms.py  views.py
task_manager/authorization/templates/: login.html
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: auth_helper.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_remove_user_full_name_remove_user_name_and_more.py  0003_user_password.py
task_manager/statuses/: decorators.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: auth_helper.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: create.html  main.html  main_page.html  update.html  user_delete.html
task_manager/users/: admin.py  auth_helper.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/: decorators.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/templates/: task_create.html  task_delete.html  task_show.html  task_update.html  tasks_index.html
templates/: main.html  update.html
users/: decorators.py  forms.py  tests.py  urls.py  views.py
users/templates/: user_create.html  user_delete.html  user_update.html  users_index.html
(+37 files in other folders)
