[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Igor Loskutov <omfi017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
django = "^4.2.7"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
flake8 = "^6.1.0"
django-filter = "^23.5"


[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
