[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager (educational project)"
authors = ["Igor Loskutov <omfi017@gmail.com>"]
readme = "README.md"
# packages = [{include = "task_manager"}]
classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
django = "^4.2.7"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
django-filter = "^23.5"
psycopg2-binary = "^2.9.9"
coverage = "^7.3.3"
django-coverage-plugin = "^3.1.0"
requests = "^2.31.0"
flake8 = "4.0.1"
rollbar = "0.16.3"


[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ["tests.py"]